--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==19.9.0
 mysqlclient==1.3.13
 Pillow==5.3.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 python-decouple==3.1
 pytz==2018.5
 whitenoise==4.1
