--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+Babel==2.6.0
 dj-database-url==0.5.0
 Django==2.1.2
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
 django-multiselectfield==0.1.8
+django-phonenumber-field==2.1.0
 django-select-multiple-field==0.4.2
+django-summernote==0.8.10.0
 gunicorn==19.9.0
 mysqlclient==1.3.13
+phonenumbers==8.10.0
 Pillow==5.3.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
